# nanocode-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: agent.cpp  agent.hpp  llm_client.cpp  llm_client.hpp  main.cpp  tools.cpp  tools.hpp
